Fix the responsive table on IE.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -91,6 +91,11 @@ ol.breadcrumb li.active {
 }
 
 /* Better table styling. */
+
+.table-responsive {
+  width: 100%;
+}
+
 .table .img-circle {
   margin-right: 0.5em;
 }
